Added Protected endpoints: Protected UpdateUser
